--- a/teams/team-riker/dev/templates/alb-skiapp/rollout.yaml
+++ b/teams/team-riker/dev/templates/alb-skiapp/rollout.yaml
@@ -17,64 +17,22 @@ spec:
         app: skiapp
     spec:
       containers:
-      - name: skiapp
-        image: sharepointoscar/skiapp:v1
-        imagePullPolicy: Always
-        ports:
-        - name: http
-          containerPort: 8080
-          protocol: TCP
-        resources:
+        - name: skiapp
+          image: sharepointoscar/skiapp:v2
+          imagePullPolicy: Always
+          ports:
+            - name: http
+              containerPort: 8080
+              protocol: TCP
+          resources:
             requests:
-                memory: "64Mi"
-                cpu: "250m"
+              memory: '64Mi'
+              cpu: '250m'
             limits:
-                memory: "128Mi"
-                cpu: "1"
+              memory: '128Mi'
+              cpu: '1'
   strategy:
     blueGreen:
       autoPromotionEnabled: false
       activeService: skiapp-service
       previewService: skiapp-service-preview
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: skiapp-service-preview
-  namespace: team-riker
-spec:
-  ports:
-    - port: 80
-      targetPort: 8080
-      protocol: TCP
-  type: NodePort
-  selector:
-    app: skiapp
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: skiapp-ingress-preview
-  namespace: team-riker
-  annotations:
-    alb.ingress.kubernetes.io/group.name: riker-preview
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
-    #alb.ingress.kubernetes.io/tags: Environment=preview,Team=RikerPreview
-spec:
-  ingressClassName: alb
-  rules:
-  - host: #skiapprev.{{ .Values.spec.ingress.host }}
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: skiapp-service-preview
-            port:
-              number: 80
